fintechdatahub-connect/k8s/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintechdatahub-connect-rest-deployment
  labels:
    app: fintechdatahub-connect-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintechdatahub-connect-rest
  template:
    metadata:
      labels:
        app: fintechdatahub-connect-rest
    spec:
      containers:
        - name: fintechdatahub-connect-rest
          image: fintechdatahub-connect-rest:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
