fintechdatahub-connect/k8s/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintechdatahub-connect-rest-service
  labels:
    app: fintechdatahub-connect-rest
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: fintechdatahub-connect-rest
